// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render Cell component correctly 1`] = `
<input
  className="cell fixed"
  id="c00"
  onFocus={[Function]}
  onKeyDown={[Function]}
  readOnly={true}
  type="text"
  value={1}
/>
`;

exports[`should render Cell component with active value correctly 1`] = `
<input
  className="cell fixed highlight"
  id="c00"
  onFocus={[Function]}
  onKeyDown={[Function]}
  readOnly={true}
  type="text"
  value={2}
/>
`;

exports[`should render Cell component with preset value correctly 1`] = `
<input
  className="cell fixed"
  id="c00"
  onFocus={[Function]}
  onKeyDown={[Function]}
  readOnly={true}
  type="text"
  value={2}
/>
`;

exports[`should render Cell component with value 0 correctly 1`] = `
<input
  className="cell"
  id="c00"
  onChange={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  readOnly={false}
  type="text"
  value=""
/>
`;

exports[`should render error Cell component correctly 1`] = `
<input
  className="cell error fixed"
  id="c00"
  onFocus={[Function]}
  onKeyDown={[Function]}
  readOnly={true}
  type="text"
  value={1}
/>
`;
